# kflow-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
.kflow/: config.yaml
.kflow/state/: current_task.yaml
kflow/: __init__.py  main.py
kflow/adapters/: base.py  build.py  gitnexus.py  gsd.py  test.py  verify.py
kflow/cli/: analyze_cmd.py  app.py  artifact_cmd.py  build_cmd.py  common.py  config_cmd.py  doctor_cmd.py  env_cmd.py  init_cmd.py  inspect_cmd.py  intake_cmd.py  phase_cmd.py  plan_cmd.py  sprint_cmd.py  task_cmd.py  test_cmd.py  verify_cmd.py
kflow/config/: defaults.py  loader.py  migrator.py
kflow/core/: __init__.py  exceptions.py  state_machine.py  stop_conditions.py  validator.py
kflow/models/: __init__.py  config.py  env.py  policy.py  results.py  sprint.py  task.py
kflow/policy/: __init__.py  defaults.py  evaluator.py  loader.py
kflow/services/: analyze_service.py  artifact_service.py  change_plan_service.py  closeout_service.py  config_service.py  diff_service.py  doctor_service.py  env_service.py  evidence_service.py  execution_service.py  handoff_service.py  init_service.py  inspect_service.py  intake_service.py  phase_service.py  plan_service.py  planning_service.py  report_service.py  result_service.py  sprint_service.py  task_service.py
kflow/templates/: __init__.py  change_plan.py  ci_workflow.py  renderer.py  result.py  task_brief.py  verify_checklist.py
kflow/utils/: console.py  files.py  markdown.py  paths.py  shell.py  time.py  yaml_io.py
tests/integration/: test_cli_flow.py
(+17 files in other folders)
